@@ -6,7 +6,7 @@ backend: search_api_db
 backend_config:
   database: 'default:default'
   min_chars: 3
-  partial_matches: false
+  matching: 'words'
   autocomplete:
     suggest_suffix: true
     suggest_words: true
